fix: Rename method